# unk_engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  test.html
assets/map/: overworld_map.xml  overworld_map_test_obj.xml
src/: main.cpp
src/core/: Engine.cpp  ResourceMgr.cpp  TileMgr.cpp  Timer.cpp
src/core/components/: TileMgr.cpp  flecs.c
src/helpers/: Memory.cpp  PakLoader.cpp  TileMgr.cpp  TinyXml.cpp  Utilities.cpp
src/public/: Imports.h  Macros.h
src/public/core/: Engine.h  Object.h  ResourceMgr.h  TileMgr.h  Timer.h
src/public/core/components/: Camera.h  Sprite.h  TileMgr.h  Transform.h  flecs.h
src/public/helpers/: Logging.h  Memory.h  PakLoader.h  TileMap.h  TinyXml.h  Utilities.h
templates/android/: .gitignore
templates/android/app/: build.gradle
templates/android/app/src/main/: AndroidManifest.xml
templates/android/app/src/main/assets/: test.json
templates/android/app/src/main/assets/map/: overworld_map.xml  overworld_map_base64.xml  overworld_map_test.xml
templates/android/app/src/main/java/com/unkengine/app/: MainActivity.java
templates/android/app/src/main/res/values/: strings.xml
templates/ios/: Info.plist.in  LaunchScreen.storyboard
tools/: package_cook.py
